--- a/src/Blogger/BlogBundle/Resources/config/routing.yml
+++ b/src/Blogger/BlogBundle/Resources/config/routing.yml
@@ -22,3 +22,10 @@ blogger_blog_blog_show:
     requirements:
         methods:  GET
         id: \d+
+
+blogger_blog_comment_create:
+    path:  /comment/{blog_id}
+    defaults: { _controller: "BloggerBlogBundle:Comment:create" }
+    requirements:
+        methods:  POST
+        blog_id: \d+
