--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,10 +10,13 @@ parameters:
     locale: en
 
 assetic:
+    bundles:    [BloggerBlogBundle]
     debug:          '%kernel.debug%'
     use_controller: '%kernel.debug%'
     filters:
         cssrewrite: ~
+        yui_css:
+            jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
 
 framework:
     #esi: ~
