--- a/src/Blogger/BlogBundle/Resources/config/routing.yml
+++ b/src/Blogger/BlogBundle/Resources/config/routing.yml
@@ -17,7 +17,7 @@ blogger_blog_contact:
         methods:  GET|POST
 
 blogger_blog_blog_show:
-    path:  /{id}
+    path:  /{id}/{slug}
     defaults: { _controller: "BloggerBlogBundle:Blog:show" }
     requirements:
         methods:  GET
